fix: change 通識課程 name

--- a/generalCourse.in
+++ b/generalCourse.in
@@ -1,4 +1,4 @@
-department 特色通識—在地實踐
+department 特色通識—社會創新(在地實踐)
 994017
 994057
 994065
@@ -21,7 +21,7 @@ department 特色通識—在地實踐
 994112
 994113
 994114
-department 特色通識—綠概念
+department 特色通識—淨零永續(綠概念)
 993062
 994127
 994001
@@ -33,7 +33,7 @@ department 特色通識—綠概念
 994121
 994074
 994027
-department 特色通識—東南亞
+department 特色通識—國際連結(東南亞)
 992106
 994030
 994096
